<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:background="@color/background"
        android:columnCount="2"
        android:rowCount="4"
        android:columnOrderPreserved="false"
        android:padding="@dimen/act_add"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:textSize="@dimen/text_20sp"
            android:typeface="serif"
            android:text="@string/sum_text_view"
            android:layout_marginTop="@dimen/act_add"

            />

        <EditText
            android:id="@+id/edit_sum"
            android:gravity="end"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:autofillHints=""
            android:hint="@string/hint_sum"
            android:textSize="@dimen/text_20sp"
            android:paddingRight="@dimen/padding_5dp"
            android:layout_marginTop="@dimen/act_add"
            android:maxWidth="@dimen/act_add"
            android:textStyle="italic"
            />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="fill"
            android:gravity="start|center"
            android:textSize="@dimen/text_20sp"
            android:typeface="serif"
            android:layout_marginTop="@dimen/act_add"
            />

        <EditText
            android:id="@+id/edit_addinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_title"
            android:maxWidth="@dimen/act_add"
            android:gravity="end"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add"
            android:paddingRight="@dimen/padding_5dp"
            android:textSize="@dimen/text_20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:gravity="start|center"
            android:textSize="@dimen/text_20sp"
            android:typeface="serif"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add"

           />
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:spinnerMode="dropdown"
            android:layout_marginTop="@dimen/act_add"
            android:textSize="@dimen/text_20sp"
            android:textStyle="italic"
            android:paddingRight="@dimen/padding_5dp"
            />



        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/date"
            android:gravity="center_horizontal"


            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add"

            />
        <EditText
            android:id="@+id/etToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_date"
            android:maxWidth="@dimen/act_add"
            android:gravity="end"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add"
            android:paddingRight="@dimen/padding_5dp"
            android:textSize="@dimen/text_20sp"
            android:textStyle="italic"
            tools:ignore="GridLayout" />

    </GridLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp"

        android:text="@string/save" />

</LinearLayout>